DB added without Migration

--- a/LabaidKioskMachine/LabaidKioskMachine.csproj
+++ b/LabaidKioskMachine/LabaidKioskMachine.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\Lenovo\Desktop\Kiosk EnBn Final\</PublishUrl>
+    <PublishUrl>C:\Users\Lenovo\Desktop\KioskFinal\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -26,7 +26,7 @@
     <TargetCulture>en-US</TargetCulture>
     <ProductName>Labaid Kiosk</ProductName>
     <PublisherName>Labaid SRIT</PublisherName>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>2.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
