DB file migrated

--- a/LabaidKioskMachine/LabaidKioskMachine.csproj
+++ b/LabaidKioskMachine/LabaidKioskMachine.csproj
@@ -249,6 +249,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataLink\DataLink.csproj">
+      <Project>{df027bae-9c95-4fc1-8166-862e016abb74}</Project>
+      <Name>DataLink</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
