--- a/EntityLayer/EntityLayer.csproj
+++ b/EntityLayer/EntityLayer.csproj
@@ -50,12 +50,22 @@
     <Compile Include="Complaint.cs" />
     <Compile Include="ContextDb.cs" />
     <Compile Include="Feedback.cs" />
+    <Compile Include="Migrations\201803041350448_icantseesharp1.cs" />
+    <Compile Include="Migrations\201803041350448_icantseesharp1.Designer.cs">
+      <DependentUpon>201803041350448_icantseesharp1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803041350448_icantseesharp1.resx">
+      <DependentUpon>201803041350448_icantseesharp1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
