--- a/LabaidKioskMachine/App.config
+++ b/LabaidKioskMachine/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+
+  <connectionStrings>
+    <add name="LabaidHealthKioskDb" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\LabaidHealthKioskDb.mdf;Integrated Security=True;Connect Timeout=30" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
